fix: Revert Merge branch 'stable/8.7' of https://github.com/camunda/camunda into stable/8.7
This reverts commit 37342dbf8eafd779ef752edf90b9bbcb0d09643f, reversing
changes made to 3dd605342933d2a794686cc72f056b6e2ce8efef.